--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-oni-chan
-http://radio.garden
+<html>
+<body>
+    <a href="http://radio.garden">Moje oblubene noviny</a>
+</body>
+
+</html>
+
+
+
 https://getemoji.com
