--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <body>
-    <a href="http://radio.garden">Moje oblubene noviny</a>
+    <a href="http://radio.garden">sak radio pod pocuvat</a>
 </body>
 
 </html>
 
 
 
-https://getemoji.com
+
