--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
-<head>
-smrdis  
-</head>
+
+
+
 <body>
+   <h1> smrdis</h1>
+   <h2>vazne smrdis</h2>
+   <h3>sak chod prec</h3>
+   <h4>chod sa osprchovat</h4>
+   
     <a href="http://radio.garden">sak radio pod pocuvat</a>
 </body>
 
