--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <h4>chod sa osprchovat</h4>
    
     <a href="http://radio.garden">sak radio pod pocuvat</a>
+    <a href=https://www.twitchquotes.com/copypastas/ascii-art>kresbiiii</a>
 </body>
 
 </html>
