--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
    <h4>chod sa osprchovat</h4>
    
     <a href="http://radio.garden">sak radio pod pocuvat</a>
+     <h5>pod sem </h5>
+     <h6>blizsie este blizsie</h6>
     <a href=https://www.twitchquotes.com/copypastas/ascii-art>kresbiiii</a>
 </body>
 
