--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 
 
 
-<body>{font-size: 100px;
-}
+<body>
+    { font-size:100px;
+
+    }
+
    <h1> smrdis</h1>
    <h2>vazne smrdis</h2>
    <h3>sak chod prec</h3>
