--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <html>
 
+<head>
 
+<body> 
+    <style>
+        body {
+            font-size:24px;
+        }
+        a {
+            font-weight:bold;
+        }
+        a:hover {
+            text-decoration:none;
+            color:red;
+        }
+        a:visited {
+            color:green;
+        }
 
-<body> {
-    font-size:100px;
-}
 
 
    <h1> smrdis</h1>
@@ -17,6 +30,8 @@
      <h6>blizsie este blizsie</h6>
     <a href=https://www.twitchquotes.com/copypastas/ascii-art>kresbiiii</a>
     <h7>:D</h7>
+
+</head>
 </body>
 
 </html>
