--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         a:visited {
             color:green;
         }
+</style>
 
+</head>
+<body>
 
 
    <h1> smrdis</h1>
@@ -31,7 +34,7 @@
     <a href=https://www.twitchquotes.com/copypastas/ascii-art>kresbiiii</a>
     <h7>:D</h7>
 
-</head>
+
 </body>
 
 </html>
