--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         }
         a:hover {
             text-decoration:none;
-            color:red;
+            color:rgb(7, 1, 63);
         }
         a:visited {
-            color:green;
+            color:rgb(47, 202, 0);
         }
 </style>
 
